parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> declaration
Rule 5     global_declaration -> function_definition
Rule 6     function_definition -> type_specifier declarator declaration_list_opt compound_statement
Rule 7     function_definition -> declarator declaration_list_opt compound_statement
Rule 8     declaration_list -> declaration
Rule 9     declaration_list -> declaration_list declaration
Rule 10    declaration_list_opt -> declaration_list
Rule 11    declaration_list_opt -> empty
Rule 12    type_specifier -> VOID
Rule 13    type_specifier -> CHAR
Rule 14    type_specifier -> INT
Rule 15    type_specifier -> FLOAT
Rule 16    declaration -> type_specifier init_declarator_list_opt SEMI
Rule 17    declarator -> direct_declarator
Rule 18    declarator -> pointer_opt direct_declarator
Rule 19    pointer_opt -> TIMES pointer
Rule 20    pointer_opt -> TIMES empty
Rule 21    pointer -> pointer_opt
Rule 22    direct_declarator -> identifier
Rule 23    direct_declarator -> LPAREN declarator RPAREN
Rule 24    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 25    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 26    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 27    identifier -> ID
Rule 28    constant_expression_opt -> constant_expression
Rule 29    constant_expression_opt -> empty
Rule 30    identifier_list -> identifier
Rule 31    identifier_list -> identifier_list identifier
Rule 32    identifier_list_opt -> identifier_list
Rule 33    identifier_list_opt -> empty
Rule 34    constant_expression -> binary_expression
Rule 35    binary_expression -> cast_expression
Rule 36    binary_expression -> binary_expression TIMES binary_expression
Rule 37    binary_expression -> binary_expression DIVIDE binary_expression
Rule 38    binary_expression -> binary_expression MOD binary_expression
Rule 39    binary_expression -> binary_expression PLUS binary_expression
Rule 40    binary_expression -> binary_expression MINUS binary_expression
Rule 41    binary_expression -> binary_expression LT binary_expression
Rule 42    binary_expression -> binary_expression LE binary_expression
Rule 43    binary_expression -> binary_expression GT binary_expression
Rule 44    binary_expression -> binary_expression GE binary_expression
Rule 45    binary_expression -> binary_expression EQ binary_expression
Rule 46    binary_expression -> binary_expression NE binary_expression
Rule 47    binary_expression -> binary_expression AND binary_expression
Rule 48    binary_expression -> binary_expression OR binary_expression
Rule 49    cast_expression -> unary_expression
Rule 50    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 51    unary_expression -> postfix_expression
Rule 52    unary_expression -> PLUSPLUS unary_expression
Rule 53    unary_expression -> MINUSMINUS unary_expression
Rule 54    unary_expression -> unary_operator cast_expression
Rule 55    postfix_expression -> primary_expression
Rule 56    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 57    postfix_expression -> postfix_expression LPAREN argument_expression_opt RPAREN
Rule 58    postfix_expression -> postfix_expression PLUSPLUS
Rule 59    postfix_expression -> postfix_expression MINUSMINUS
Rule 60    argument_expression_opt -> argument_expression
Rule 61    argument_expression_opt -> empty
Rule 62    primary_expression -> identifier
Rule 63    primary_expression -> constant
Rule 64    primary_expression -> LPAREN expression RPAREN
Rule 65    constant -> INT_CONST
Rule 66    constant -> CHAR_CONST
Rule 67    constant -> FLOAT_CONST
Rule 68    constant -> STR_CONST
Rule 69    expression -> assignment_expression
Rule 70    expression -> expression COMMA assignment_expression
Rule 71    argument_expression -> assignment_expression
Rule 72    argument_expression -> argument_expression COMMA assignment_expression
Rule 73    assignment_expression -> binary_expression
Rule 74    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 75    assignment_operator -> EQUALS
Rule 76    assignment_operator -> TIMESEQUALS
Rule 77    assignment_operator -> DIVIDEEQUALS
Rule 78    assignment_operator -> MODEQUALS
Rule 79    assignment_operator -> PLUSEQUALS
Rule 80    assignment_operator -> MINUSEQUALS
Rule 81    unary_operator -> ADDRESS
Rule 82    unary_operator -> TIMES
Rule 83    unary_operator -> PLUS
Rule 84    unary_operator -> MINUS
Rule 85    unary_operator -> EXMARK
Rule 86    parameter_list -> parameter_declaration
Rule 87    parameter_list -> parameter_list COMMA parameter_declaration
Rule 88    parameter_declaration -> type_specifier declarator
Rule 89    init_declarator_list_opt -> init_declarator_list
Rule 90    init_declarator_list_opt -> empty
Rule 91    init_declarator_list -> init_declarator
Rule 92    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 93    init_declarator -> declarator
Rule 94    init_declarator -> declarator EQUALS initializer
Rule 95    initializer -> assignment_expression
Rule 96    initializer -> LBRACE initializer_list RBRACE
Rule 97    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 98    initializer_list -> initializer
Rule 99    initializer_list -> initializer_list COMMA initializer
Rule 100   compound_statement -> LBRACE declaration_list_opt statement_list_opt RBRACE
Rule 101   statement_list -> statement
Rule 102   statement_list -> statement_list statement
Rule 103   statement_list_opt -> statement_list
Rule 104   statement_list_opt -> empty
Rule 105   statement -> expression_statement
Rule 106   statement -> compound_statement
Rule 107   statement -> selection_statement
Rule 108   statement -> iteration_statement
Rule 109   statement -> jump_statement
Rule 110   statement -> assert_statement
Rule 111   statement -> print_statement
Rule 112   statement -> read_statement
Rule 113   expression_statement -> expression_opt SEMI
Rule 114   expression_opt -> expression
Rule 115   expression_opt -> empty
Rule 116   selection_statement -> IF LPAREN expression RPAREN statement
Rule 117   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 118   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 119   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 120   iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 121   jump_statement -> BREAK SEMI
Rule 122   jump_statement -> RETURN expression_opt SEMI
Rule 123   assert_statement -> ASSERT expression SEMI
Rule 124   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 125   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 126   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 81
AND                  : 47
ASSERT               : 123
BREAK                : 121
CHAR                 : 13
CHAR_CONST           : 66
COMMA                : 70 72 87 92 97 99
DIVIDE               : 37
DIVIDEEQUALS         : 77
ELSE                 : 117
EQ                   : 45
EQUALS               : 75 94
EXMARK               : 85
FLOAT                : 15
FLOAT_CONST          : 67
FOR                  : 119 120
GE                   : 44
GT                   : 43
ID                   : 27
IF                   : 116 117
INT                  : 14
INT_CONST            : 65
LBRACE               : 96 97 100
LBRACKET             : 24 56
LE                   : 42
LPAREN               : 23 25 26 50 57 64 116 117 118 119 120 124 125
LT                   : 41
MINUS                : 40 84
MINUSEQUALS          : 80
MINUSMINUS           : 53 59
MOD                  : 38
MODEQUALS            : 78
NE                   : 46
OR                   : 48
PLUS                 : 39 83
PLUSEQUALS           : 79
PLUSPLUS             : 52 58
PRINT                : 124
RBRACE               : 96 97 100
RBRACKET             : 24 56
READ                 : 125
RETURN               : 122
RPAREN               : 23 25 26 50 57 64 116 117 118 119 120 124 125
SEMI                 : 16 113 119 119 120 121 122 123 124 125
STR_CONST            : 68
TIMES                : 19 20 36 82
TIMESEQUALS          : 76
VOID                 : 12
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

argument_expression  : 60 72 125
argument_expression_opt : 57
assert_statement     : 110
assignment_expression : 69 70 71 72 74 95
assignment_operator  : 74
binary_expression    : 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 73
cast_expression      : 35 50 54
compound_statement   : 6 7 106
constant             : 63
constant_expression  : 28
constant_expression_opt : 24
declaration          : 4 8 9 120
declaration_list     : 9 10
declaration_list_opt : 6 7 100
declarator           : 6 7 23 88 93 94
direct_declarator    : 17 18 24 25 26
empty                : 11 20 29 33 61 90 104 115
expression           : 56 64 70 114 116 117 118 123
expression_opt       : 113 119 119 119 120 120 122 124
expression_statement : 105
function_definition  : 5
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 22 30 31 62
identifier_list      : 31 32
identifier_list_opt  : 26
init_declarator      : 91 92
init_declarator_list : 89 92
init_declarator_list_opt : 16
initializer          : 94 98 99
initializer_list     : 96 97 99
iteration_statement  : 108
jump_statement       : 109
parameter_declaration : 86 87
parameter_list       : 25 87
pointer              : 19
pointer_opt          : 18 21
postfix_expression   : 51 56 57 58 59
primary_expression   : 55
print_statement      : 111
program              : 0
read_statement       : 112
selection_statement  : 107
statement            : 101 102 116 117 117 118 119 120
statement_list       : 102 103
statement_list_opt   : 100
type_specifier       : 6 16 50 88
unary_expression     : 49 52 53 74
unary_operator       : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (16) declaration -> . type_specifier init_declarator_list_opt SEMI
    (6) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (7) function_definition -> . declarator declaration_list_opt compound_statement
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . INT
    (15) type_specifier -> . FLOAT
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer_opt direct_declarator
    (22) direct_declarator -> . identifier
    (23) direct_declarator -> . LPAREN declarator RPAREN
    (24) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (26) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (19) pointer_opt -> . TIMES pointer
    (20) pointer_opt -> . TIMES empty
    (27) identifier -> . ID

    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    LPAREN          shift and go to state 15
    TIMES           shift and go to state 16
    ID              shift and go to state 17

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    direct_declarator              shift and go to state 12
    pointer_opt                    shift and go to state 13
    identifier                     shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (16) declaration -> . type_specifier init_declarator_list_opt SEMI
    (6) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (7) function_definition -> . declarator declaration_list_opt compound_statement
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . INT
    (15) type_specifier -> . FLOAT
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer_opt direct_declarator
    (22) direct_declarator -> . identifier
    (23) direct_declarator -> . LPAREN declarator RPAREN
    (24) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (26) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (19) pointer_opt -> . TIMES pointer
    (20) pointer_opt -> . TIMES empty
    (27) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    LPAREN          shift and go to state 15
    TIMES           shift and go to state 16
    ID              shift and go to state 17

    global_declaration             shift and go to state 18
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    direct_declarator              shift and go to state 12
    pointer_opt                    shift and go to state 13
    identifier                     shift and go to state 14

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> declaration .

    VOID            reduce using rule 4 (global_declaration -> declaration .)
    CHAR            reduce using rule 4 (global_declaration -> declaration .)
    INT             reduce using rule 4 (global_declaration -> declaration .)
    FLOAT           reduce using rule 4 (global_declaration -> declaration .)
    LPAREN          reduce using rule 4 (global_declaration -> declaration .)
    TIMES           reduce using rule 4 (global_declaration -> declaration .)
    ID              reduce using rule 4 (global_declaration -> declaration .)
    $end            reduce using rule 4 (global_declaration -> declaration .)


state 5

    (5) global_declaration -> function_definition .

    VOID            reduce using rule 5 (global_declaration -> function_definition .)
    CHAR            reduce using rule 5 (global_declaration -> function_definition .)
    INT             reduce using rule 5 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 5 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 5 (global_declaration -> function_definition .)
    TIMES           reduce using rule 5 (global_declaration -> function_definition .)
    ID              reduce using rule 5 (global_declaration -> function_definition .)
    $end            reduce using rule 5 (global_declaration -> function_definition .)


state 6

    (16) declaration -> type_specifier . init_declarator_list_opt SEMI
    (6) function_definition -> type_specifier . declarator declaration_list_opt compound_statement
    (89) init_declarator_list_opt -> . init_declarator_list
    (90) init_declarator_list_opt -> . empty
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer_opt direct_declarator
    (91) init_declarator_list -> . init_declarator
    (92) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (126) empty -> .
    (22) direct_declarator -> . identifier
    (23) direct_declarator -> . LPAREN declarator RPAREN
    (24) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (26) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (19) pointer_opt -> . TIMES pointer
    (20) pointer_opt -> . TIMES empty
    (93) init_declarator -> . declarator
    (94) init_declarator -> . declarator EQUALS initializer
    (27) identifier -> . ID

    SEMI            reduce using rule 126 (empty -> .)
    LPAREN          shift and go to state 15
    TIMES           shift and go to state 16
    ID              shift and go to state 17

    init_declarator_list_opt       shift and go to state 19
    declarator                     shift and go to state 20
    init_declarator_list           shift and go to state 21
    empty                          shift and go to state 22
    direct_declarator              shift and go to state 12
    pointer_opt                    shift and go to state 13
    init_declarator                shift and go to state 23
    identifier                     shift and go to state 14

state 7

    (7) function_definition -> declarator . declaration_list_opt compound_statement
    (10) declaration_list_opt -> . declaration_list
    (11) declaration_list_opt -> . empty
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list declaration
    (126) empty -> .
    (16) declaration -> . type_specifier init_declarator_list_opt SEMI
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . INT
    (15) type_specifier -> . FLOAT

    LBRACE          reduce using rule 126 (empty -> .)
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    declaration_list_opt           shift and go to state 24
    declaration_list               shift and go to state 25
    empty                          shift and go to state 26
    declaration                    shift and go to state 27
    type_specifier                 shift and go to state 28

state 8

    (12) type_specifier -> VOID .

    LPAREN          reduce using rule 12 (type_specifier -> VOID .)
    TIMES           reduce using rule 12 (type_specifier -> VOID .)
    ID              reduce using rule 12 (type_specifier -> VOID .)
    SEMI            reduce using rule 12 (type_specifier -> VOID .)
    RPAREN          reduce using rule 12 (type_specifier -> VOID .)


state 9

    (13) type_specifier -> CHAR .

    LPAREN          reduce using rule 13 (type_specifier -> CHAR .)
    TIMES           reduce using rule 13 (type_specifier -> CHAR .)
    ID              reduce using rule 13 (type_specifier -> CHAR .)
    SEMI            reduce using rule 13 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 13 (type_specifier -> CHAR .)


state 10

    (14) type_specifier -> INT .

    LPAREN          reduce using rule 14 (type_specifier -> INT .)
    TIMES           reduce using rule 14 (type_specifier -> INT .)
    ID              reduce using rule 14 (type_specifier -> INT .)
    SEMI            reduce using rule 14 (type_specifier -> INT .)
    RPAREN          reduce using rule 14 (type_specifier -> INT .)


state 11

    (15) type_specifier -> FLOAT .

    LPAREN          reduce using rule 15 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 15 (type_specifier -> FLOAT .)
    ID              reduce using rule 15 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 15 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 15 (type_specifier -> FLOAT .)


state 12

    (17) declarator -> direct_declarator .
    (24) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (26) direct_declarator -> direct_declarator . LPAREN identifier_list_opt RPAREN

    VOID            reduce using rule 17 (declarator -> direct_declarator .)
    CHAR            reduce using rule 17 (declarator -> direct_declarator .)
    INT             reduce using rule 17 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 17 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 17 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 17 (declarator -> direct_declarator .)
    COMMA           reduce using rule 17 (declarator -> direct_declarator .)
    SEMI            reduce using rule 17 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 17 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 29
    LPAREN          shift and go to state 30


state 13

    (18) declarator -> pointer_opt . direct_declarator
    (22) direct_declarator -> . identifier
    (23) direct_declarator -> . LPAREN declarator RPAREN
    (24) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (26) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (27) identifier -> . ID

    LPAREN          shift and go to state 15
    ID              shift and go to state 17

    direct_declarator              shift and go to state 31
    identifier                     shift and go to state 14

state 14

    (22) direct_declarator -> identifier .

    LBRACKET        reduce using rule 22 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 22 (direct_declarator -> identifier .)
    VOID            reduce using rule 22 (direct_declarator -> identifier .)
    CHAR            reduce using rule 22 (direct_declarator -> identifier .)
    INT             reduce using rule 22 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 22 (direct_declarator -> identifier .)
    LBRACE          reduce using rule 22 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 22 (direct_declarator -> identifier .)
    COMMA           reduce using rule 22 (direct_declarator -> identifier .)
    SEMI            reduce using rule 22 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 22 (direct_declarator -> identifier .)


state 15

    (23) direct_declarator -> LPAREN . declarator RPAREN
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer_opt direct_declarator
    (22) direct_declarator -> . identifier
    (23) direct_declarator -> . LPAREN declarator RPAREN
    (24) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (25) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (26) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (19) pointer_opt -> . TIMES pointer
    (20) pointer_opt -> . TIMES empty
    (27) identifier -> . ID

    LPAREN          shift and go to state 15
    TIMES           shift and go to state 16
    ID              shift and go to state 17

    declarator                     shift and go to state 32
    direct_declarator              shift and go to state 12
    pointer_opt                    shift and go to state 13
    identifier                     shift and go to state 14

state 16

    (19) pointer_opt -> TIMES . pointer
    (20) pointer_opt -> TIMES . empty
    (21) pointer -> . pointer_opt
    (126) empty -> .
    (19) pointer_opt -> . TIMES pointer
    (20) pointer_opt -> . TIMES empty

    LPAREN          reduce using rule 126 (empty -> .)
    ID              reduce using rule 126 (empty -> .)
    TIMES           shift and go to state 16

    pointer                        shift and go to state 33
    empty                          shift and go to state 34
    pointer_opt                    shift and go to state 35

state 17

    (27) identifier -> ID .

    LBRACKET        reduce using rule 27 (identifier -> ID .)
    LPAREN          reduce using rule 27 (identifier -> ID .)
    VOID            reduce using rule 27 (identifier -> ID .)
    CHAR            reduce using rule 27 (identifier -> ID .)
    INT             reduce using rule 27 (identifier -> ID .)
    FLOAT           reduce using rule 27 (identifier -> ID .)
    LBRACE          reduce using rule 27 (identifier -> ID .)
    EQUALS          reduce using rule 27 (identifier -> ID .)
    COMMA           reduce using rule 27 (identifier -> ID .)
    SEMI            reduce using rule 27 (identifier -> ID .)
    RPAREN          reduce using rule 27 (identifier -> ID .)
    PLUSPLUS        reduce using rule 27 (identifier -> ID .)
    MINUSMINUS      reduce using rule 27 (identifier -> ID .)
    TIMES           reduce using rule 27 (identifier -> ID .)
    DIVIDE          reduce using rule 27 (identifier -> ID .)
    MOD             reduce using rule 27 (identifier -> ID .)
    PLUS            reduce using rule 27 (identifier -> ID .)
    MINUS           reduce using rule 27 (identifier -> ID .)
    LT              reduce using rule 27 (identifier -> ID .)
    LE              reduce using rule 27 (identifier -> ID .)
    GT              reduce using rule 27 (identifier -> ID .)
    GE              reduce using rule 27 (identifier -> ID .)
    EQ              reduce using rule 27 (identifier -> ID .)
    NE              reduce using rule 27 (identifier -> ID .)
    AND             reduce using rule 27 (identifier -> ID .)
    OR              reduce using rule 27 (identifier -> ID .)
    RBRACKET        reduce using rule 27 (identifier -> ID .)
    ID              reduce using rule 27 (identifier -> ID .)
    TIMESEQUALS     reduce using rule 27 (identifier -> ID .)
    DIVIDEEQUALS    reduce using rule 27 (identifier -> ID .)
    MODEQUALS       reduce using rule 27 (identifier -> ID .)
    PLUSEQUALS      reduce using rule 27 (identifier -> ID .)
    MINUSEQUALS     reduce using rule 27 (identifier -> ID .)
    RBRACE          reduce using rule 27 (identifier -> ID .)


state 18

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 19

    (16) declaration -> type_specifier init_declarator_list_opt . SEMI

    SEMI            shift and go to state 36


state 20

    (6) function_definition -> type_specifier declarator . declaration_list_opt compound_statement
    (93) init_declarator -> declarator .
    (94) init_declarator -> declarator . EQUALS initializer
    (10) declaration_list_opt -> . declaration_list
    (11) declaration_list_opt -> . empty
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list declaration
    (126) empty -> .
    (16) declaration -> . type_specifier init_declarator_list_opt SEMI
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . INT
    (15) type_specifier -> . FLOAT

    COMMA           reduce using rule 93 (init_declarator -> declarator .)
    SEMI            reduce using rule 93 (init_declarator -> declarator .)
    EQUALS          shift and go to state 38
    LBRACE          reduce using rule 126 (empty -> .)
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    type_specifier                 shift and go to state 28
    declaration_list_opt           shift and go to state 37
    declaration_list               shift and go to state 25
    empty                          shift and go to state 26
    declaration                    shift and go to state 27

state 21

    (89) init_declarator_list_opt -> init_declarator_list .
    (92) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 89 (init_declarator_list_opt -> init_declarator_list .)
    COMMA           shift and go to state 39


state 22

    (90) init_declarator_list_opt -> empty .

    SEMI            reduce using rule 90 (init_declarator_list_opt -> empty .)


state 23

    (91) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 91 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 91 (init_declarator_list -> init_declarator .)


state 24

    (7) function_definition -> declarator declaration_list_opt . compound_statement
    (100) compound_statement -> . LBRACE declaration_list_opt statement_list_opt RBRACE

    LBRACE          shift and go to state 41

    compound_statement             shift and go to state 40

state 25

    (10) declaration_list_opt -> declaration_list .
    (9) declaration_list -> declaration_list . declaration
    (16) declaration -> . type_specifier init_declarator_list_opt SEMI
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . INT
    (15) type_specifier -> . FLOAT

    LBRACE          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    IF              reduce using rule 10 (declaration_list_opt -> declaration_list .)
    WHILE           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    FOR             reduce using rule 10 (declaration_list_opt -> declaration_list .)
    BREAK           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    RETURN          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    ASSERT          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    PRINT           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    READ            reduce using rule 10 (declaration_list_opt -> declaration_list .)
    PLUSPLUS        reduce using rule 10 (declaration_list_opt -> declaration_list .)
    MINUSMINUS      reduce using rule 10 (declaration_list_opt -> declaration_list .)
    LPAREN          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    ADDRESS         reduce using rule 10 (declaration_list_opt -> declaration_list .)
    TIMES           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    PLUS            reduce using rule 10 (declaration_list_opt -> declaration_list .)
    MINUS           reduce using rule 10 (declaration_list_opt -> declaration_list .)
    EXMARK          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    ID              reduce using rule 10 (declaration_list_opt -> declaration_list .)
    INT_CONST       reduce using rule 10 (declaration_list_opt -> declaration_list .)
    CHAR_CONST      reduce using rule 10 (declaration_list_opt -> declaration_list .)
    FLOAT_CONST     reduce using rule 10 (declaration_list_opt -> declaration_list .)
    STR_CONST       reduce using rule 10 (declaration_list_opt -> declaration_list .)
    RBRACE          reduce using rule 10 (declaration_list_opt -> declaration_list .)
    SEMI            reduce using rule 10 (declaration_list_opt -> declaration_list .)
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    declaration                    shift and go to state 42
    type_specifier                 shift and go to state 28

state 26

    (11) declaration_list_opt -> empty .

    LBRACE          reduce using rule 11 (declaration_list_opt -> empty .)
    IF              reduce using rule 11 (declaration_list_opt -> empty .)
    WHILE           reduce using rule 11 (declaration_list_opt -> empty .)
    FOR             reduce using rule 11 (declaration_list_opt -> empty .)
    BREAK           reduce using rule 11 (declaration_list_opt -> empty .)
    RETURN          reduce using rule 11 (declaration_list_opt -> empty .)
    ASSERT          reduce using rule 11 (declaration_list_opt -> empty .)
    PRINT           reduce using rule 11 (declaration_list_opt -> empty .)
    READ            reduce using rule 11 (declaration_list_opt -> empty .)
    PLUSPLUS        reduce using rule 11 (declaration_list_opt -> empty .)
    MINUSMINUS      reduce using rule 11 (declaration_list_opt -> empty .)
    LPAREN          reduce using rule 11 (declaration_list_opt -> empty .)
    ADDRESS         reduce using rule 11 (declaration_list_opt -> empty .)
    TIMES           reduce using rule 11 (declaration_list_opt -> empty .)
    PLUS            reduce using rule 11 (declaration_list_opt -> empty .)
    MINUS           reduce using rule 11 (declaration_list_opt -> empty .)
    EXMARK          reduce using rule 11 (declaration_list_opt -> empty .)
    ID              reduce using rule 11 (declaration_list_opt -> empty .)
    INT_CONST       reduce using rule 11 (declaration_list_opt -> empty .)
    CHAR_CONST      reduce using rule 11 (declaration_list_opt -> empty .)
    FLOAT_CONST     reduce using rule 11 (declaration_list_opt -> empty .)
    STR_CONST       reduce using rule 11 (declaration_list_opt -> empty .)
    RBRACE          reduce using rule 11 (declaration_list_opt -> empty .)
    SEMI            reduce using rule 11 (declaration_list_opt -> empty .)


state 27

    (8) declaration_list -> declaration .
